# python-otel-project-demo

./: .claudeignore  .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  EXPERIMENTS.md  GETTING_STARTED.md  Makefile  README.md  Taskfile.yml  docker-compose.yml  podman-stack.yml  pyproject.toml  versions.env
.claude/: claude_commit-message.instructions.md  claude_instructions.md  claude_langchain-python.instructions.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: development-setup.md  pull_request_template.md
agent-logs/: Dockerfile  README.md  pyproject.toml
agent-logs/agent_logs/: __init__.py  logs_analyzer.py  main.py
agent-logs/agent_logs/prompts/: analyze_logs.md  build_logql.md
agent-metrics/: Dockerfile  README.md  pyproject.toml
agent-metrics/agent_metrics/: __init__.py  main.py  metrics_analyzer.py
agent-metrics/agent_metrics/prompts/: analyze_metrics.md  build_promql.md
agent-orchestrator/: Dockerfile  README.md  pyproject.toml  pytest.ini
agent-orchestrator/agent_orchestrator/: __init__.py  main.py  orchestrator.py
agent-orchestrator/agent_orchestrator/prompts/: chat_response.md  classify_intent.md  route_agents.md  route_query.md  synthesize_analysis.md  validate_response.md
agent-orchestrator/tests/: __init__.py  test_benchmark_models.py  test_orchestrator_core.py  test_orchestrator_integration.py  test_orchestrator_simple.py
agent-traces/: Dockerfile  README.md  pyproject.toml
agent-traces/agent_traces/: __init__.py  main.py  traces_analyzer.py
agent-traces/agent_traces/prompts/: analyze_traces.md  build_traceql.md
agent-traduction/: Dockerfile  README.md  pyproject.toml
agent-ui/: .gitignore  Dockerfile  README.md  pyproject.toml  rebuild.sh  rxconfig.py
agent-ui/agent_ui/: __init__.py  agent_ui.py  main.py  state.py
agent-ui/agent_ui/templates/: base.html  index.html
agents-common/: README.md  pyproject.toml
agents-ui/: Dockerfile  README.md  pyproject.toml  rxconfig.py
agents-ui/agents_ui/: __init__.py  agents_ui.py  state.py
ai-traduction/: Dockerfile  README.md  pyproject.toml
benchmark/: README.md  benchmark_results.html  pyproject.toml
benchmark/benchmark/: __init__.py  agent_requests.py  config.py  main.py  metrics.py  models.py  resources.py  summary.py  ui.py  validation.py
benchmark/benchmark/agents/: __init__.py  logs.py  metrics.py  orchestrator.py  traces.py  translation.py
benchmark/benchmark/benchmarks/: __init__.py  base.py  logs.py  metrics.py  orchestrator.py  traces.py  translation.py
common/: pyproject.toml
common-ai/: CLAUDE.md  README.md  pyproject.toml
common-ai/common_ai/: __init__.py  agent_models.py  llm_config.py  llm_utils.py  mcp_client.py  ollama_utils.py
common-models/: README.md  pyproject.toml
common/common/: __init__.py  llm_config.py  models.py
config/: CLAUDE.md  README.md  otel-conf.yml  tempo.yml
customer/: Dockerfile  README.md  pyproject.toml
customer/customer/: customer_producer.py
docker-compose/: docker-compose-ai-tools.yml  docker-compose-ai.yml  docker-compose-apps.yml  docker-compose-db.yml  docker-compose-kafka.yml  docker-compose-observability.yml  docker-compose-traefik.yml  init-db.sql
docs/: README.md  agentic-mcp-strategy.md  agents.md  ai-prompts-architecture.md  architecture.md  configuration.md  contributing.md  development.md  docker-security.md  mcp-phase2-implementation.md  orchestrator-simplified.md  podman_toolbox_bazzite_setup.md  prompts-simplified.md  prompts.md  troubleshooting.md
lib-ai/: CLAUDE.md  README.md  pyproject.toml
lib-models/: CLAUDE.md  README.md  pyproject.toml
ms-beerstock/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
ms-brewcheck/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
ms-brewcheck/brewcheck/: brewcheck_consumer.py
ms-brewcheck/tests/: test_http_calls.py  test_kafka_retry.py  test_metrics.py  test_otel_spans.py  test_smoke.py  test_spans.py
ms-brewer/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
ms-brewer/brewer/: brewer_producer.py
ms-brewer/tests/: conftest.py  test_metrics.py  test_otel_spans.py  test_producer_messages.py  test_smoke.py  test_spans.py
ms-brewery/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
ms-brewmaster/: CLAUDE.md  Dockerfile  pyproject.toml
ms-cellar/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
ms-cellar/cellar/: __init__.py  crud.py  main.py  models.py  schemas.py
ms-cellar/cellar/routes/: cellar.py
ms-cellar/tests/: conftest.py  test_crud.py  test_smoke.py
ms-customer/: CLAUDE.md  Dockerfile  pyproject.toml
ms-dispatch/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
ms-dispatch/dispatch/: dispatch_consumer.py
ms-dispatch/tests/: test_smoke.py
ms-fermentation/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
ms-fermentation/fermentation/: fermentation_worker.py
ms-fermentation/tests/: conftest.py  test_fermentation.py  test_smoke.py
ms-ingredientcheck/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
ms-order/: CLAUDE.md  Dockerfile  pyproject.toml
ms-supplier/: CLAUDE.md  Dockerfile  pyproject.toml
ms-supplier/supplier/: supplier_producer.py
ms-supplier/tests/: test_metrics.py  test_otel_spans.py  test_producer_messages.py  test_smoke.py  test_spans.py
order/: Dockerfile  README.md  pyproject.toml  pyrightconfig.json
order/order/: __init__.py  crud.py  database.py  models.py  schemas.py
order/order/routes/: orders.py
ordercheck/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
ordercheck/ordercheck/: ordercheck_consumer.py
ordermanagement/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
ordermanagement/ordermanagement/: ordermanagement.py
stock/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
stock/stock/: __init__.py  crud.py  main.py  models.py  schemas.py
stock/stock/routes/: stocks.py
stock/tests/: conftest.py
supplier/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
supplier/supplier/: supplier_producer.py
suppliercheck/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
suppliercheck/suppliercheck/: suppliercheck_consumer.py
(+203 files in other folders)
