[project]
name = "agent-logs"
version = "0.1.0"
description = "Logs analysis agent specialized in querying Loki via MCP"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.9.2",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "black>=24.10.0",
    "pyright>=1.1.390",
]
