[project]
name = "agent-metrics"
version = "0.1.0"
description = "Metrics analysis agent specialized in querying Mimir via MCP"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-openai>=0.3.8",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "pyright",
]
