[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "Orchestrator agent for coordinating specialized observability agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "common",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "black>=24.10.0",
    "pyright>=1.1.390",
]
