[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "Orchestrator agent for coordinating specialized observability agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "common-ai",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-openai>=0.3.8",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "pyright",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-order>=1.2.0",
]

[tool.uv.sources]
common-ai = { path = "../common-ai", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "-s",
]
markers = [
    "unit: Unit tests (deselect with '-m \"not unit\"')",
    "integration: Integration tests requiring running services (deselect with '-m \"not integration\"')",
]

[tool.pyright]
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportCallIssue = "warning"
reportArgumentType = "warning"
