[project]
name = "agent-ui"
version = "0.1.0"
description = "Reflex-based web UI for the observability agentic network"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "reflex>=0.8.18",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "pyright",
]
