[project]
name = "agent-ui"
version = "0.1.0"
description = "FastAPI-based web UI for the observability agentic network"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "jinja2>=3.1.4",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv.scripts]
start = "uvicorn agent_ui.main:app --host 0.0.0.0 --port 8000"
start-dev = "uvicorn agent_ui.main:app --reload --host 0.0.0.0 --port 8000"
test = "pytest tests/ -v"



[tool.pytest.ini_options]
testpaths = [
    "tests",
]