[project]
name = "agents-ui"
version = "0.1.0"
description = "Reflex-based web UI for the observability agentic network"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "reflex>=0.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "black>=24.10.0",
    "pyright>=1.1.390",
]
