[project]
name = "common-ai"
version = "0.1.0"
description = "Shared AI utilities and MCP client for AI agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.4",
    "httpx>=0.28.1",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-openai>=0.3.8",
    "mcp>=1.21.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "pyright",
]
