[project]
name = "common"
version = "0.1.0"
description = "Shared models and utilities for microservices and AI agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.9.2",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "black>=24.10.0",
    "pyright>=1.1.390",
]
