[tool.poetry]
name = "order"
version = "0.1.0"
description = ""
authors = ["Fabien Vergnes <fabien.vergnes@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
flasgger = "^0.9.7.1"
pydantic = "^2.9.2"
opentelemetry-distro = "^0.48b0"
opentelemetry-exporter-otlp = "^1.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
