[project]
name = "ordercheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "common-models",
    "confluent-kafka>=2.12.2",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "pyright",
]

[tool.uv.sources]
common-models = { path = "../common-models", editable = true }