[project]
name = "stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flasgger>=0.9.7.1",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.9.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "black>=24.10.0",
    "pyright>=1.1.390",
]
