[project]
name = "suppliercheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "confluent-kafka>=2.6.0",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "black>=24.10.0",
    "pyright>=1.1.390",
]
